data/Java/01-missing-return-type/3/[M]Error.txt
https://stackoverflow.com/questions/7451707/java-error-invalid-method-declaration-return-type-required
Circle.java:8: error: invalid method declaration; return type required
    public diameter()
           ^